--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ li {
 }
 
 .page-title {
-	max-width: 800px;
+	max-width: 700px;
 	margin: 0 auto;
 	text-align: center;
 	padding: 5px 15px 15px 15px;
@@ -105,6 +105,7 @@ button {
 	border-radius: 5px;
 }
 
+
 #footer {
 	background-color: #2f2f2f;
 	padding: 40px 0;
@@ -121,5 +122,47 @@ p {
 	font-size: 14px;
 }
 
+/* Resume Page */
 
+#resume-content {
+	max-width: 700px;
+}
+
+.column1 {
+  float: left;
+  width: 30%;
+  border-color: black;
+  border-left-width: 2pt;
+  border-style: solid;
+}
+
+.column2 {
+	float: right;
+	width: 65%;
+	border-color: black;
+  	border-left-width: 2pt;
+  	border-style: solid;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.job-date {
+	text-align: left;
+}
+
+.job-employer {
+	text-align: left;
+}
+
+.job-title {
+	text-align: left;
+}
+
+.job-description {
+	text-align: left;
+}
 
